# homelab-ai-monitoring

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: README.md  agent.py  claude.py  config.py  google_wifi.py  main.py  pihole.py  proxmox.py  switch.py  truenas.py
docs/: DEVELOPER_GUIDE_MODULES.md
static/: app.js  index.html  style.css
