[project]
name = "homelab-ai-monitoring"
version = "0.1.0"
description = "Homelab AI Dashboard Monitoring"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "uvicorn>=0.49.0",
    "httpx>=0.28.1",
    "anthropic>=0.112.0",
]

[tool.uv]
dev-dependencies = []
